--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,12 @@ h1 {
     }
     input {
         font-size: 2rem;
+        max-width: 100%;
     }
     h1 {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
     h3 {
-      font-size: 2.5rem;  
+      font-size: 2rem;  
     }
 }
