--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 body {
     background: lightgray;
-    font: 100% "Trebuchet MS", sans-serif;
-    font-family: Verdana,Arial,sans-serif;
 }
 ul > li {
     list-style: none;
@@ -16,14 +14,9 @@ ul > li {
 }
 
 /*--------default_font--------*/
-/*
-font-size{
-    1rem;
+body {
+    font: 1rem Ubuntu, sans-serif;
 }
-h1 {
-    font:3rem Trebuchet MS;
-}
-*/
 
 /*-----mobile_font-----*/
 
